--- a/assign1.html
+++ b/assign1.html
@@ -50,6 +50,25 @@
         pass at Thermopylae. Since the Greek strategy required both Thermopylae and Artemisium to be held, given their
         losses, it was decided to withdraw to Salamis. The Persians overran Boeotia and then captured the evacuated
         Athens.</t></p>
+<p> Testing area ----
+    <input type="button" value="button"> ----
+</p>
+<p> 
+    <input type="radio" name="group 1" value="1" id="321"> A radio
+    <input type="radio" name="group 1" value="2" id="123"> Another radio
+    <input type="radio" name="group 1" value="3" id="987"> A third radio
+    <label for="321">A radio</label>
+</p>
+
+<p> Form assignment <input type="button" value="start"> (the button doesn't actually do anything)</p>
+<p>Did you read the paragraphs? (select all that apply)</p> 
+
+<p> <input type="checkbox"> I did not read any of the paragraphs </p>
+<p> <input type="checkbox"> Paragraph 1 </p>
+<p> <input type="checkbox"> Paragraph 2 </p> 
+<p> <input type="checkbox"> Paragraph 3 </p>
+
+    
 
 
 
